fix: add student year to get owner
